--- a/the_first_stage/task2/styles/task2.css
+++ b/the_first_stage/task2/styles/task2.css
@@ -1,40 +1,111 @@
-body,header,nav,li,h1,h2,h3,a,article,section,p,span,img,figure,figcaption{
+/*body,header,nav,li,h1,h2,h3,a,article,section,p,span,img,figure,figcaption{
+	margin: 0;
+	padding: 0;
+}*/
+body,nav,img,ul,li{
 	margin: 0;
 	padding: 0;
 }
 
-header{
-	height: 60px;
-	overflow: hidden;
-	background-color: #333333;
+body{
+	background-color: #dedede;
 	font-family: "微软雅黑";
 }
 
+nav{
+	height: 60px;
+	background-color: #333333;
+}
+
 .logo{
-	float: left;
 	margin-left: 40px;
 	margin-top: 10px;
 }
 
-ul{
+nav ul{
 	float: right;
-	margin-right: 20px;  
+	margin-right: 20px;
 	margin-top: 20px;
 }
-
-li{
-	float: right;
-	color: white;
+	
+nav li{
+	width: 60px;
+	height: 16px;
+	float: left;
+	margin-left: 20px;
 	font-size: 12px;
 }
 
-
-li a{
+nav li a{
 	text-decoration: none;
+	color: #fffcf7;
 }
 
-li a:hover,
-li a:focus,
-li a active{
-	color: #a7a1a1;
+nav li a:hover,
+nav li a:focus,
+nav li a:active{
+	color: #959096;
 }
+
+main{
+	padding: 20px;
+}
+
+article,
+aside{
+	background-color: #ffffff;
+	padding: 25px 20px;
+	margin-bottom: 20px;
+	border: 1px solid #cdcdcd;
+	box-shadow: 2px 2px 3px #848484;
+}
+
+article:hover,
+article:focus{
+	box-shadow: 5px 5px 6px #848484;
+}
+
+.arti-info h3,
+.arti-info span{
+	color: #646464;
+}
+
+.arti-two ul{
+	list-style: none;
+	padding: 20px;
+}
+
+.arti-three figure{
+	text-align: center;
+	width: 300px;
+	padding: 10px;
+	margin-bottom: 30px;
+	border: 2px solid #cdcdcd;
+}
+.arti-three figcaption{
+	font-size: 11px;
+	padding-bottom: 10px;
+}
+
+.arti-four table{
+	width: 100%;
+	font-size: 14px;
+}
+
+.arti-four th,
+.arti-four td{
+	outline:1px solid #cdcddc;
+	padding: 5px;
+}
+
+.arti-four thead{
+	background-color: black;
+	color: white;
+	text-align: left;
+}
+
+.arti-four tfoot{
+	background-color: #cdcddc;
+}
+
+
