--- a/part4/task4-1/src/styles/index.css
+++ b/part4/task4-1/src/styles/index.css
@@ -60,10 +60,16 @@ span{
 	padding-top: .6em;
 	padding-bottom: .6em;
     border: none;
+    box-shadow:  2px 2px 3px #848484;
+    border-radius: 4px;
     background-color: #f07600;
     font-size: 1.15em;
     color: #ffffff;
     margin-left: 25%;
     position: relative;
     top: 40%;
+}
+.create-ques a{
+	text-decoration: none;
+	color: #ffffff;
 }
