--- a/part4/task4-1/src/styles/edit.css
+++ b/part4/task4-1/src/styles/edit.css
@@ -1,49 +1,4 @@
-body{
-	font: normal 100% Helvetica, Arial, sans-serif;
-	background-color: #efefef;
-}
-a{
-	text-decoration: none;
-	color: #fff;
-}
-span{
-	display: inline-block;
-}
-.nav{
-	height: 2.875em;
-	background-color: #ee7419;
-	color: #ffffff;
-}
-
-#logo{
-	font-size: 1.25em;
-	font-weight: bold;
-	margin-top: 0.45em;
-	margin-left: 0.5%;
-}
-.nav img{
-	width: 1.25em;
-	height: 1.25em;
-    max-width: 100%;
-    float: left;
-    overflow: hidden;
-    margin-top: 0.85em;
-    margin-left:7%;
-}
-.nav span{
-	float: left;	
-}
-
-#per-ques {
-	margin-top: 0.8em;
-	padding-left: 6%;
-}
-
-.main {
-	width: 100%;
-}
-
-.edit-ques {
+#edit-ques {
     width: 72.4%;
     background-color: #ffffff;
     margin-top: 4.375em;
